# score_log

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
interface/: Makefile.am  Makefile.in
interface/score/: log.h
src/: config.h.in  log.c
test/: tests.c
